ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Instalment_Schedule__c/KFS_Instalment_Schedule__c.object-meta.xml
<CustomObject>
    <label>KFS Instalment Schedule</label>
    <nameField>
        <label>KFS Instalment Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KFS Instalment Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>