ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Instalment_Schedule__c/fields/Deal_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Number__c</fullName>
    <label>Deal Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>