ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Instalment_Schedule__c/fields/From_Month__c.field-meta.xml
<CustomField>
    <fullName>From_Month__c</fullName>
    <label>From Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>