ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Instalment_Schedule__c/fields/Health_Amount__c.field-meta.xml
<CustomField>
    <fullName>Health_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Health Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>