ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Instalment_Schedule__c/fields/Instal_Date__c.field-meta.xml
<CustomField>
    <fullName>Instal_Date__c</fullName>
    <label>Instal Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>