ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Instalment_Schedule__c/fields/Instal_Number__c.field-meta.xml
<CustomField>
    <fullName>Instal_Number__c</fullName>
    <label>Instal Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>