ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Instalment_Schedule__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>