ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Instalment_Schedule__c/fields/Key_Fact_Statement__c.field-meta.xml
<CustomField>
    <fullName>Key_Fact_Statement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Fact Statement</label>
    <referenceTo>Key_Fact_Statement__c</referenceTo>
    <relationshipLabel>KFS Instalment Schedule</relationshipLabel>
    <relationshipName>KFS_Instalment_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>