ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Instalment_Schedule__c/fields/POSB_Charges__c.field-meta.xml
<CustomField>
    <fullName>POSB_Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>POSB Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>