ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Instalment_Schedule__c/fields/Principal__c.field-meta.xml
<CustomField>
    <fullName>Principal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Principal</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>