ProdIND/ProdPrograms/force-app/main/default/objects/KFS_Instalment_Schedule__c/fields/To_Month__c.field-meta.xml
<CustomField>
    <fullName>To_Month__c</fullName>
    <label>To Month</label>
    <length>50</length>
    <type>Text</type>
</CustomField>